--- a/application/application.yml
+++ b/application/application.yml
@@ -6,18 +6,18 @@ proxy:
   heartbeat-rate: 10000 # the user's browser will send a heartbeat call every heartbeat-rate milliseconds (10s as default)
   heartbeat-timeout: 60000 # if the server does not receive a heartbeat for heartbeat-timeout milliseconds, the relevant proxy will be released (60s as default)
 
-  usage-stats-url: {url_to_your_InfluxDB_instance}:8086/write?db=shinyproxy_usagestats # use InfluxDB to store usage statistics; can be in a different server
+  usage-stats-url: http://{your_InfluxDB_instance_domain}:8086/write?db=shinyproxy_usagestats # use InfluxDB to store usage statistics; can be in a different server
   # usage-stats-username: xxxx # influxdb username if needed
   # usage-stats-password: xxxx # influxdb password if needed
 
   #### OpenID Connect Authentication ####
   authentication: openid # use openid auth framework
   openid:
-    roles-claim: cognito:groups # use the groups value passed by AWS cognito to identify user groups 
-    auth-url: # https://{cognito_domain}.{region}.amazoncognito.com/oauth2/authorize
-    token-url: # https://{cognito_domain}.{region}.amazoncognito.com/oauth2/token
+    roles-claim: cognito:groups # use the groups value passed by AWS cognito to identify user groups
+    auth-url: # https://{cognito_domain_prefix}.auth.{region}.amazoncognito.com/oauth2/authorize
+    token-url: # https://{cognito_domain_prefix}.auth.{region}.amazoncognito.com/oauth2/token
     jwks-url: # https://cognito-idp.{region}.amazonaws.com/{userPoolId}/.well-known/jwks.json
-    logout-url: # https://{cognito_domain}.{region}.amazoncognito.com/logout?client_id={client_id}&logout_uri={host_url}
+    logout-url: # https://{cognito_domain_prefix}.auth.{region}.amazoncognito.com/logout?client_id={client_id}&logout_uri={your_host_url}
     client-id:  # get this from AWS Cognito user pool management page
     client-secret:  # get this from AWS Cognito user pool management page
   
@@ -38,8 +38,8 @@ proxy:
       display-name: Euler's number
       container-cmd: ["R", "-e", "shiny::runApp('/root/euler')"]
       container-image: YOUR_USERNAME/shiny-euler-app
-      port: 3838
       access-groups: admins
+      container-network: sp-net
 
 server:
   useForwardHeaders: true # this is very important to make the AWS Cognito auth works
